# novel-graph

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/novel_graph/: cli.py
src/novel_graph/analysis/: __init__.py  book_profile.py  graph_summary.py  keywords.py  llm_graph.py  simple_graph.py
src/novel_graph/domain/: __init__.py  models.py
src/novel_graph/io/: __init__.py  input_loader.py  output_writer.py
src/novel_graph/pipelines/: __init__.py  direct_scan.py  graph_scan.py
src/novel_graph/prompts/: __init__.py  direct_scan.md  graph_extract.md  graph_reduce.md  graph_scan.md
src/novel_graph/rendering/: markdown_renderer.py
src/novel_graph/resources/: __init__.py  scan_requirements.md  style_reference.md  term_reference.md
src/novel_graph/services/: __init__.py  llm_client.py  prompt_repo.py
tests/: test_cli.py  test_graph.py  test_keywords.py  test_llm_client.py
