[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "novel-graph"
version = "0.1.0"
description = "Turn novel source materials into scan-style markdown with direct prompting or a lightweight knowledge graph."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "ebooklib>=0.18,<1.0.0",
  "openai>=1.75.0,<2.0.0",
  "typer>=0.16.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
novel-graph = "novel_graph.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/novel_graph"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]
